# proj2

./: AStar.cpp  AStar.h  BFS.cpp  BFS.h  BestFirstSearch.cpp  BestFirstSearch.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  CacheManagers.h  ClientHandler.cpp  ClientHandler.h  DFS.cpp  DFS.h  FileCacheManager.cpp  FileCacheManager.h  HillClimbing.cpp  HillClimbing.h  Matrix.cpp  Matrix.h  MatrixCreator.cpp  MatrixCreator.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyServers.h  MyTestClientHandler.cpp  MyTestClientHandler.h  Piont.cpp  Piont.h  Point.cpp  Point.h  Problem.cpp  Problem.h  SearchSolver.cpp  SearchSolver.h  Searchable.cpp  (+23 more)
